// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The getmyArticlesPage view The ConfirmDeleteModal component Should initially ask for delete confirmation 1`] = `
<div
  className="modal fade"
  data-backdrop="static"
  data-keyboard="false"
  id="confirmDeleteModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title mx-auto"
          id="confirmDeleteModalTilte"
        >
          Delete Article?
        </h5>
      </div>
      <div
        className="modal-body"
      >
        <p
          className="text-center"
        >
          Are you sure you want to delete this Article?
          <br />
          This process is
           
          <strong
            className="text-danger"
          >
            irreversible
          </strong>
          .
        </p>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="btn btn-danger"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Delete
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`The getmyArticlesPage view The ConfirmDeleteModal component Should show error status when request fails 1`] = `
<div
  className="modal fade"
  data-backdrop="static"
  data-keyboard="false"
  id="confirmDeleteModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title mx-auto"
          id="confirmDeleteModalTilte"
        >
          Delete Article?
        </h5>
      </div>
      <div
        className="modal-body"
      >
        <div
          className="alert text-center alert-danger"
        >
          
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`The getmyArticlesPage view The ConfirmDeleteModal component Should show loading status when request is pending 1`] = `
<div
  className="modal fade"
  data-backdrop="static"
  data-keyboard="false"
  id="confirmDeleteModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title mx-auto"
          id="confirmDeleteModalTilte"
        >
          Delete Article?
        </h5>
      </div>
      <img
        alt="Loading..."
        src={
          Object {
            "0": "l",
            "1": "o",
            "2": "a",
            "3": "d",
            "4": "e",
            "5": "r",
            "6": ".",
            "7": "s",
            "8": "v",
            "9": "g",
            "default": "loader.svg",
          }
        }
        style={
          Object {
            "margin": "auto",
            "width": "20%",
          }
        }
      />
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="btn btn-danger"
          disabled={true}
          onClick={[Function]}
          type="button"
        >
          Deleting...
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`The getmyArticlesPage view The ConfirmDeleteModal component Should show success status when request is successful 1`] = `
<div
  className="modal fade"
  data-backdrop="static"
  data-keyboard="false"
  id="confirmDeleteModal"
  role="dialog"
  tabIndex="-1"
>
  <div
    className="modal-dialog"
    role="document"
  >
    <div
      className="modal-content"
    >
      <div
        className="modal-header"
      >
        <h5
          className="modal-title mx-auto"
          id="confirmDeleteModalTilte"
        >
          Delete Article?
        </h5>
      </div>
      <div
        className="modal-body"
      >
        <div
          className="alert text-center alert-success"
        >
          You have successfully deleted this article
        </div>
      </div>
      <div
        className="modal-footer"
      >
        <button
          className="btn btn-secondary"
          data-dismiss="modal"
          disabled={false}
          onClick={[Function]}
          type="button"
        >
          Close
        </button>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`The getmyArticlesPage view The MyArticle component Should not regress 1`] = `
<div
  className="my-article"
>
  <h1>
    <a
      className="article-title"
      href="/article/test-slug-001"
      onClick={[Function]}
    >
      test title
    </a>
  </h1>
  <p>
    test description
  </p>
  <div>
    <span
      className="text-muted"
    >
      <small>
        Created:
        Wed Sep 12 2018
      </small>
    </span>
    <span
      className="ml-5"
    >
      <a
        className="btn btn-primary link"
        href="article/test-slug-001/edit"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Edit
      </a>
      <button
        className="btn btn-danger ml-2"
        data-target="#confirmDeleteModal"
        data-toggle="modal"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Delete
      </button>
    </span>
  </div>
  <hr
    style={
      Object {
        "margin": "0.7em",
      }
    }
  />
  <div
    className="row"
  >
    <div
      className="col-1 text-center"
    >
      <i
        className="text-warning fa fa-star"
      />
      <br />
      <small>
         - 
      </small>
    </div>
    <div
      className="col-1 text-center"
    >
      <i
        className="text-success fa fa-thumbs-up"
      />
      <br />
      <small />
    </div>
    <div
      className="col-1 text-center"
    >
      <i
        className="text-danger fa fa-thumbs-down"
      />
      <br />
      <small />
    </div>
  </div>
</div>
`;

exports[`The getmyArticlesPage view The MyArticleList component Should render all articles in case of a successful request 1`] = `
<div
  className="my-article"
>
  <h1>
    <a
      className="article-title"
      href="/article/lennys-first-article-1-29b5102ef9a84eb9bfbf60da42f63122"
      onClick={[Function]}
    >
      Lenny's First Article 1
    </a>
  </h1>
  <p>
    This is my first article and I don't know what's going on...
  </p>
  <div>
    <span
      className="text-muted"
    >
      <small>
        Created:
        Wed Sep 12 2018
      </small>
    </span>
    <span
      className="ml-5"
    >
      <a
        className="btn btn-primary link"
        href="article/lennys-first-article-1-29b5102ef9a84eb9bfbf60da42f63122/edit"
        onClick={[Function]}
        onKeyDown={[Function]}
      >
        Edit
      </a>
      <button
        className="btn btn-danger ml-2"
        data-target="#confirmDeleteModal"
        data-toggle="modal"
        disabled={false}
        onClick={[Function]}
        type="button"
      >
        Delete
      </button>
    </span>
  </div>
  <hr
    style={
      Object {
        "margin": "0.7em",
      }
    }
  />
  <div
    className="row"
  >
    <div
      className="col-1 text-center"
    >
      <i
        className="text-warning fa fa-star"
      />
      <br />
      <small>
         - 
      </small>
    </div>
    <div
      className="col-1 text-center"
    >
      <i
        className="text-success fa fa-thumbs-up"
      />
      <br />
      <small>
        0
      </small>
    </div>
    <div
      className="col-1 text-center"
    >
      <i
        className="text-danger fa fa-thumbs-down"
      />
      <br />
      <small>
        0
      </small>
    </div>
  </div>
</div>
`;

exports[`The getmyArticlesPage view The MyArticleList component Should render text if user has no articles 1`] = `
<h4>
  You have not created any articles yet.
</h4>
`;

exports[`The getmyArticlesPage view The MyArticleList component Should render the error message in case of failure 1`] = `
<div
  className="alert alert-danger text-center"
>
  An error occurred
</div>
`;
